handles signup and login submits

--- a/views/index.html
+++ b/views/index.html
@@ -23,11 +23,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-            </ul>
+            <ul class="navbar-nav mr-auto"></ul>
             <button  type="button" class="btn btn-outline-success my-2 my-sm-0" id="login-btn" data-toggle="modal" data-target="#modalLoginForm">Log in</button>
             <!-- LOGIN MODAL -->
             <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
@@ -54,7 +50,7 @@
                             <button class="btn btn-default">Login</button>
                         </div>
                         <div class="signup">
-                            <p>Don't have an account? <a href="/signup" class="signup-link">Sign up</a></p>
+                            <p>Don't have an account? <a href="signup.html" class="signup-link">Sign up</a></p>
                         </div>
                     </div>
                 </div>
@@ -70,7 +66,7 @@
             <div class="why">
                 <p>Release Pro helps Engineering teams keep track of their releases throughout the release process. The more information a team member can see about the release, the better a release can be for your users.</p>
             </div>
-            <button type="button" class="btn btn-primary mt-5 join-btn" id="signup-btn">Sign Up Now</button>
+            <button type="button" class="btn btn-primary mt-5 join-btn" id="signup-btn" href="signup.html">Sign Up Now</button>
         </div>
     </div>
     <div class="box2">
