--- a/views/release.html
+++ b/views/release.html
@@ -55,7 +55,6 @@
                     <div class="row row-cols-1 row-cols-md-2">
                         <div class="col mb-4">
                             <div class="card">
-                                <img src="..." class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title" id="os">Current iOS Release</h5>
                                     <p class="card-text" id="type">Alpha/Beta/Production</p>
@@ -72,7 +71,6 @@
                         </div>
                         <div class="col mb-4">
                             <div class="card">
-                                <img src="..." class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Current Android Release</h5>
                                     <p class="card-text" id="type">Alpha/Beta/Production</p>
@@ -89,7 +87,6 @@
                         </div>
                         <div class="col mb-4">
                             <div class="card">
-                                <img src="..." class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">iOS Release</h5>
                                     <p class="card-text" id="type"></p>
@@ -106,7 +103,6 @@
                         </div>
                         <div class="col mb-4">
                             <div class="card">
-                                <img src="..." class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Android Release</h5>
                                     <p class="card-text" id="type"></p>
@@ -142,7 +138,7 @@
                                     <div class="profile-info">
                                         <div class="col-sm-12">
                                             <div class="col-xs-12 col-sm-8">
-                                                <h3 id="name">firstName lastName</h3>
+                                                <h3 id="name">firstName</h3>
                                                 <p id="email">email</p><p id="slack">slackHandle</p>
                                                 <p id="role">role</p>
                                                 <p>Projects I work on:
