renders profile on release screen

--- a/public/styles/editprofile.css
+++ b/public/styles/editprofile.css
@@ -8,7 +8,7 @@
 }
 
 /* -------- Navbar Styling -------- */
-#login-btn {
+#profile-btn {
     color: #ffffff;
     background-color: #796eff;
     border: none;
