--- a/views/addrelease.html
+++ b/views/addrelease.html
@@ -14,16 +14,14 @@
 <body>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Release Pro</a>
+        <a class="navbar-brand" href="/">Release Pro</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
+                <li class="nav-item active"></li>
             </ul>
             <button type="button" class="btn btn-outline-success my-2 my-sm-0" id="profile-btn">Profile</button>
         </div>
@@ -63,7 +61,7 @@
                 </div>
                 <div class="form-group">
                     <label for="exampleInputExperiments">Experiments</label>
-                    <input type="text" class="form-control" id="Experiments" aria-describedby="versionNumberHelp" placeholder="New request button experiment">
+                    <input type="text" class="form-control" id="experiments" aria-describedby="versionNumberHelp" placeholder="New request button experiment">
                 </div>
                 <div class="form-group">
                     <label for="exampleInputNotes">Notes</label>
