--- a/views/editprofile.html
+++ b/views/editprofile.html
@@ -8,51 +8,22 @@
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="./styles/editprofile.css">
     <!-- CUSTOM JS -->
-    <script defer src=".scripts/editprofile.js"></script>
+    <script defer src="./scripts/editprofile.js"></script>
     <title>Release Pro: Edit Profile</title>
 </head>
 <body>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Release Pro</a>
+        <a class="navbar-brand" href="/">Release Pro</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
+                <li class="nav-item active"></li>
             </ul>
-            <button  type="button" class="btn btn-outline-success my-2 my-sm-0" id="login-btn" data-toggle="modal" data-target="#modalLoginForm">Log in</button>
-            <!-- LOGIN MODAL -->
-            <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-            aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header text-center">
-                            <h4 class="modal-title w-100 font-weight-bold">Log Out</h4>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body mx-3">
-                            <div class="md-form mb-5">
-                                <input type="email" id="defaultForm-email" class="form-control validate">
-                                <label data-error="wrong" data-success="right" for="defaultForm-email">Your email</label>
-                            </div>
-                            <div class="md-form mb-4">
-                                <input type="password" id="defaultForm-pass" class="form-control validate">
-                                <label data-error="wrong" data-success="right" for="defaultForm-pass">Your password</label>
-                            </div>
-                        </div>
-                        <div class="modal-footer d-flex justify-content-center">
-                            <button class="btn btn-default">Login</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <button  type="submit" class="btn btn-outline-success my-2 my-sm-0" id="profile-btn" data-toggle="modal" data-target="#modalLogoutForm">Profile</button>
         </div>
     </nav>
 
