--- a/views/index.html
+++ b/views/index.html
@@ -36,21 +36,18 @@
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
-                        <div class="modal-body mx-3" id="loginForm">
+                        <div class="modal-body mx-3">
                             <div class="md-form mb-5">
-                                <label data-error="wrong" data-success="right" for="defaultForm-email">Email</label>
-                                <input type="email" id="defaultForm-email" class="form-control" placeholder="name@email.com">
+                                <input type="email" id="defaultForm-email" class="form-control validate">
+                                <label data-error="wrong" data-success="right" for="defaultForm-email">Your email</label>
                             </div>
                             <div class="md-form mb-4">
-                                <label data-error="wrong" data-success="right" for="defaultForm-pass">Password</label>
-                                <input type="password" id="defaultForm-pass" class="form-control" placeholder="Password">
+                                <input type="password" id="defaultForm-pass" class="form-control validate">
+                                <label data-error="wrong" data-success="right" for="defaultForm-pass">Your password</label>
                             </div>
                         </div>
                         <div class="modal-footer d-flex justify-content-center">
                             <button class="btn btn-default">Login</button>
-                        </div>
-                        <div class="signup">
-                            <p>Don't have an account? <a href="signup.html" class="signup-link">Sign up</a></p>
                         </div>
                     </div>
                 </div>
