--- a/views/editprofile.html
+++ b/views/editprofile.html
@@ -23,14 +23,14 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active"></li>
             </ul>
-            <button  type="submit" class="btn btn-outline-success my-2 my-sm-0" id="profile-btn" data-toggle="modal" data-target="#modalLogoutForm">Profile</button>
+            <button  type="submit" class="btn btn-outline-success my-2 my-sm-0" id="logout-btn" data-toggle="modal" data-target="#modalLogoutForm">Logout</button>
         </div>
     </nav>
 
     <div class="box1">
         <h1>Edit Profile</h1>
         <div class="container">
-            <form class="profile-form">
+            <form class="profile-form" id="profileForm">
                 <div class="form-group">
                     <label for="exampleInputFirstName">First Name</label>
                     <input type="name" class="form-control" id="firstName" aria-describedby="firstNameHelp" placeholder="First Name">
