--- a/views/index.html
+++ b/views/index.html
@@ -70,7 +70,7 @@
         <div class="container">
             <div class="row ml-0">
                 <div class="col-sm-2 col-md-1"></div>
-                <div class="col-sm-8 col-md-10 text-center">
+                <div class="col-sm-8 col-md-10 text-center" id="text2">
                     <h2 class="pb-3">One Stop Shop For Your Release Process</h2>
                     <p>You no longer have to hit up all the different slack channels or other team members to get up to date information on current releases or any previous release. You'll be able to clearly view what went into a release. Knowing what went into a release and when it was released will help the productivity of any engineering team.</p>
                 </div>
@@ -81,12 +81,14 @@
     <div class="box3">
         <div class="container m-0">
             <div class="row">
-                <div class="col-sm-6 content">
+                <div class="col-sm-4 content" id="text3">
                     <h3>Keep Track of iOS and Android</h3>
                     <p>Releases processes for iOS and Android are completely different. The way you track them shouldn't be. Whether you submit a release candidate to the App Store or Google Play Store you can rest assure that you'll know everything there is to your release.</p>
                 </div>
-                <div class="col-sm-3"></div>
-                <div class="col-sm-3"></div>
+                <div class="col-sm-8">
+                    <img class="image3" src="../images/selective-focus-photography-of-person-holding-turned-on-1092644.jpg" alt="">
+                </div>
+                <!-- <div class="col-sm-8"></div> -->
             </div>
         </div>
     </div>
