--- a/views/release.html
+++ b/views/release.html
@@ -140,6 +140,9 @@
                                                 <h3 id="last-name">lastName</h3>
                                                 <p id="email">email</p><p id="slack">slackHandle</p>
                                                 <p id="role">role</p>
+                                                <p>Teams:
+                                                    <span id="teams">teams</span> 
+                                                </p>
                                                 <p>Projects I work on:
                                                     <span id="projects">project</span> 
                                                 </p>
